--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -270,22 +270,22 @@
       ],
       "metadata": {
         "id": "Ksa45GelElrN",
-        "outputId": "e035cc45-a98d-40cd-e5eb-dc7818cce897",
+        "outputId": "91cdaa75-cfed-4599-e786-5c9953496c9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<connection object at 0x7f17b8e9dd00; dsn: 'user=manu password=xxx dbname=aws-university-etl-db host=manu-rds-instance.covgxmxbd2or.us-east-1.rds.amazonaws.com port=5432', closed: 0>"
+              "<connection object at 0x7f17b8e9e840; dsn: 'user=manu password=xxx dbname=aws-university-etl-db host=manu-rds-instance.covgxmxbd2or.us-east-1.rds.amazonaws.com port=5432', closed: 0>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 21
         }
       ]
     },
@@ -1790,90 +1790,67 @@
     {
       "cell_type": "code",
       "source": [
-        "from faker import Faker\n",
-        "import random\n",
-        "import psycopg2\n",
-        "\n",
-        "fake = Faker('pt_BR')\n",
-        "\n",
-        "def create_connection():\n",
-        "    # Substitua pelos dados de conexão do seu banco\n",
-        "    return psycopg2.connect(\n",
-        "        host=\"seu_host\",\n",
-        "        database=\"seu_banco\",\n",
-        "        user=\"seu_usuario\",\n",
-        "        password=\"sua_senha\"\n",
-        "    )\n",
-        "\n",
-        "def inserir_professores_baseado_em_disciplinas():\n",
+        "def inserir_professores_por_disciplina():\n",
         "    conn = create_connection()\n",
         "    if conn:\n",
         "        try:\n",
         "            cur = conn.cursor()\n",
         "            conn.autocommit = False\n",
         "\n",
-        "            # Busca todas as disciplinas e seus departamentos\n",
+        "            # Obter disciplinas disponíveis\n",
         "            cur.execute(\"SELECT id, id_departamento FROM tb_disciplina\")\n",
         "            disciplinas = cur.fetchall()\n",
+        "            if not disciplinas:\n",
+        "                print(\"Nenhuma disciplina encontrada. Abortando.\")\n",
+        "                return\n",
         "\n",
-        "            professores_batch = []\n",
-        "            professor_disciplina_batch = set()\n",
+        "            professores_necessarios = {}\n",
+        "            total_professores = 0\n",
         "\n",
-        "            max_professores = 10000  # Define quantos professores deseja criar\n",
-        "            disciplinas_por_professor_range = (2, 5)  # Min e max de disciplinas por professor\n",
+        "            # Calcular professores necessários por disciplina\n",
+        "            for disciplina_id, _ in disciplinas:\n",
+        "                quantidade = random.randint(7, 15)\n",
+        "                professores_necessarios[disciplina_id] = quantidade\n",
+        "                total_professores += quantidade\n",
         "\n",
-        "            while len(professores_batch) < max_professores:\n",
-        "                # Geração dos dados do professor\n",
-        "                nome = fake.first_name()\n",
-        "                sobrenome = fake.last_name()\n",
-        "                nome_completo = f\"{nome} {sobrenome}\"\n",
-        "                matricula = fake.unique.random_number(digits=8)\n",
-        "                email = f\"{fake.user_name()}.{matricula}@ucsal.edu.br\"\n",
-        "                telefone = fake.phone_number()[:15]\n",
-        "                endereco = fake.address()\n",
-        "                cpf = fake.unique.numerify('###########')\n",
+        "            print(f\"Total de professores a serem gerados: {total_professores}\")\n",
         "\n",
-        "                id_departamento = random.choice([d[1] for d in disciplinas])\n",
-        "                professores_batch.append((nome_completo, email, id_departamento, telefone, endereco, matricula, cpf))\n",
+        "            professores = []  # Lista para todos os professores\n",
+        "            professor_disciplina = set()  # Associações\n",
         "\n",
-        "                # Seleciona de 2 a 5 disciplinas para o professor\n",
-        "                num_disciplinas = random.randint(*disciplinas_por_professor_range)\n",
-        "                disciplinas_selecionadas = random.sample(disciplinas, k=num_disciplinas)\n",
+        "            # Iniciar matrículas a partir de um valor alto (exemplo: 1.000.000)\n",
+        "            matricula_inicial = 2_000_000\n",
         "\n",
-        "                for id_disciplina, _ in disciplinas_selecionadas:\n",
-        "                    semestre = random.randint(1, 8)\n",
+        "            for disciplina_id, quantidade in professores_necessarios.items():\n",
+        "                for _ in range(quantidade):\n",
+        "                    nome = fake.first_name()\n",
+        "                    sobrenome = fake.last_name()\n",
+        "                    nome_completo = f\"{nome} {sobrenome}\"\n",
+        "                    matricula = matricula_inicial\n",
+        "                    matricula_inicial += 1  # Incrementar a matrícula para evitar duplicatas\n",
+        "                    email = f\"{fake.user_name()}.{matricula}@ucsal.edu.br\"\n",
+        "                    telefone = fake.phone_number()[:15]\n",
+        "                    endereco = fake.address()\n",
+        "                    cpf = fake.unique.numerify('###########')\n",
+        "\n",
+        "                    id_departamento = next(d[1] for d in disciplinas if d[0] == disciplina_id)\n",
+        "                    professores.append((nome_completo, email, id_departamento, telefone, endereco, matricula, cpf))\n",
+        "\n",
+        "                    semestre = random.randint(1, 9)\n",
         "                    descricao = fake.sentence(nb_words=6)\n",
-        "                    professor_disciplina_batch.add((matricula, id_disciplina, semestre, descricao))\n",
+        "                    professor_disciplina.add((matricula, disciplina_id, semestre, descricao))\n",
         "\n",
-        "                    # Insere em lotes de 1000 associações\n",
-        "                    if len(professor_disciplina_batch) >= 1000:\n",
-        "                        cur.executemany(\"\"\"\n",
-        "                            INSERT INTO tb_professor (nome_professor, email_professor, id_departamento, telefone, endereco, matricula, cpf)\n",
-        "                            VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
-        "                        \"\"\", professores_batch)\n",
+        "            # Inserir professores em lotes\n",
+        "            cur.executemany(\"\"\"\n",
+        "                INSERT INTO tb_professor (nome_professor, email_professor, id_departamento, telefone, endereco, matricula, cpf)\n",
+        "                VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
+        "            \"\"\", professores)\n",
         "\n",
-        "                        cur.executemany(\"\"\"\n",
-        "                            INSERT INTO tb_professor_disciplina (matricula_professor, id_disciplina, semestre, descricao)\n",
-        "                            VALUES (%s, %s, %s, %s)\n",
-        "                        \"\"\", list(professor_disciplina_batch))\n",
-        "\n",
-        "                        print(f\"Batch de {len(professores_batch)} professores inseridos com sucesso.\")\n",
-        "                        conn.commit()\n",
-        "                        professores_batch.clear()\n",
-        "                        professor_disciplina_batch.clear()\n",
-        "\n",
-        "            # Insere qualquer sobra de professores e associações\n",
-        "            if professores_batch:\n",
-        "                cur.executemany(\"\"\"\n",
-        "                    INSERT INTO tb_professor (nome_professor, email_professor, id_departamento, telefone, endereco, matricula, cpf)\n",
-        "                    VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
-        "                \"\"\", professores_batch)\n",
-        "\n",
-        "            if professor_disciplina_batch:\n",
-        "                cur.executemany(\"\"\"\n",
-        "                    INSERT INTO tb_professor_disciplina (matricula_professor, id_disciplina, semestre, descricao)\n",
-        "                    VALUES (%s, %s, %s, %s)\n",
-        "                \"\"\", list(professor_disciplina_batch))\n",
+        "            # Inserir associações professor-disciplina\n",
+        "            cur.executemany(\"\"\"\n",
+        "                INSERT INTO tb_professor_disciplina (matricula_professor, id_disciplina, semestre, descricao)\n",
+        "                VALUES (%s, %s, %s, %s)\n",
+        "            \"\"\", list(professor_disciplina))\n",
         "\n",
         "            conn.commit()\n",
         "            print(\"Professores e associações inseridos com sucesso.\")\n",
@@ -1884,13 +1861,27 @@
         "            cur.close()\n",
         "            conn.close()\n",
         "\n",
-        "inserir_professores_baseado_em_disciplinas()\n"
+        "# Chamar a função\n",
+        "inserir_professores_por_disciplina()\n"
       ],
       "metadata": {
-        "id": "MY7mlcEZPtFu"
+        "id": "MY7mlcEZPtFu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf26b8d8-f9c6-4e70-f0df-4619a6b6a10b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total de professores a serem gerados: 13274\n",
+            "Professores e associações inseridos com sucesso.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1901,25 +1892,56 @@
         "\n",
         "fake = Faker('pt_BR')\n",
         "\n",
-        "def inserir_alunos(alunos_por_curso=100):\n",
+        "def calcular_desconto(media_global):\n",
+        "    \"\"\"Calcula o desconto com base na média global do aluno.\"\"\"\n",
+        "    if media_global >= 8:\n",
+        "        tipo_desconto = \"Bolsa Mérito\"\n",
+        "        valor_desconto = round(random.uniform(500, 1000), 2)\n",
+        "    elif 6 <= media_global < 8:\n",
+        "        tipo_desconto = \"Bolsa Parcial\"\n",
+        "        valor_desconto = round(random.uniform(200, 500), 2)\n",
+        "    else:\n",
+        "        tipo_desconto = \"Sem Desconto\"\n",
+        "        valor_desconto = 0.0\n",
+        "    return tipo_desconto, valor_desconto\n",
+        "\n",
+        "def inserir_alunos_por_curso():\n",
+        "    \"\"\"Insere alunos proporcionalmente ao número de disciplinas e professores do curso.\"\"\"\n",
         "    conn = create_connection()\n",
         "    if conn:\n",
         "        try:\n",
         "            cur = conn.cursor()\n",
         "            conn.autocommit = False\n",
         "\n",
-        "            # Buscar os cursos disponíveis\n",
-        "            cur.execute(\"SELECT id, id_departamento, nome FROM tb_curso\")\n",
+        "            cur.execute(\"\"\"\n",
+        "                SELECT c.id AS id_curso, c.id_departamento, c.nome AS nome_curso, COUNT(d.id) AS num_disciplinas\n",
+        "                FROM tb_curso c\n",
+        "                JOIN tb_disciplina d ON d.id_departamento = c.id_departamento\n",
+        "                GROUP BY c.id, c.id_departamento, c.nome\n",
+        "            \"\"\")\n",
         "            cursos = cur.fetchall()\n",
+        "\n",
+        "            if not cursos:\n",
+        "                print(\"Nenhum curso encontrado. Abortando.\")\n",
+        "                return\n",
         "\n",
         "            alunos_batch = []\n",
         "            aluno_disciplinas_batch = set()\n",
+        "            descontos_batch = []\n",
+        "\n",
+        "            matricula_inicial = 1_000_000\n",
         "\n",
         "            for curso in cursos:\n",
-        "                id_curso, id_departamento, nome_curso = curso\n",
+        "                id_curso, id_departamento, nome_curso, num_disciplinas = curso\n",
+        "\n",
+        "                alunos_por_curso = random.randint(20_000, 50_000) + (num_disciplinas * 50)\n",
+        "\n",
+        "                print(f\"Gerando {alunos_por_curso} alunos para o curso '{nome_curso}'.\")\n",
+        "\n",
         "                for _ in range(alunos_por_curso):\n",
         "                    nome_aluno = fake.unique.name()\n",
-        "                    matricula = fake.unique.random_number(digits=8)\n",
+        "                    matricula = matricula_inicial\n",
+        "                    matricula_inicial += 1\n",
         "                    email = f\"{fake.user_name()}.{matricula}@ucsal.edu.br\"\n",
         "                    cpf = fake.unique.numerify('###########')\n",
         "                    media_global = round(random.uniform(0, 10), 2)\n",
@@ -1927,11 +1949,15 @@
         "\n",
         "                    alunos_batch.append((nome_aluno, email, cpf, media_global, status, id_curso, matricula, nome_curso))\n",
         "\n",
-        "                    # Escolher disciplinas para o aluno\n",
+        "                    tipo_desconto, valor_desconto = calcular_desconto(media_global)\n",
+        "                    if valor_desconto > 0:\n",
+        "                        descontos_batch.append((matricula, tipo_desconto, valor_desconto))\n",
+        "\n",
         "                    cur.execute(\"SELECT id, nome FROM tb_disciplina WHERE id_departamento = %s\", (id_departamento,))\n",
         "                    disciplinas_curso = cur.fetchall()\n",
         "\n",
-        "                    for _ in range(random.randint(1, 4)):  # Até 4 disciplinas por aluno\n",
+        "                    num_disciplinas_aluno = random.randint(6, 10)\n",
+        "                    for _ in range(num_disciplinas_aluno):\n",
         "                        if disciplinas_curso:\n",
         "                            disciplina = random.choice(disciplinas_curso)\n",
         "                            id_disciplina, nome_disciplina = disciplina\n",
@@ -1942,8 +1968,7 @@
         "                            nota1 = round(random.uniform(0, 5), 2)\n",
         "                            nota2 = round(random.uniform(0, 5), 2)\n",
         "\n",
-        "                            record = (matricula, id_disciplina, nome_disciplina, ano, semestre, nota_final, status_disciplina, nota1, nota2)\n",
-        "                            aluno_disciplinas_batch.add(record)\n",
+        "                            aluno_disciplinas_batch.add((matricula, id_disciplina, nome_disciplina, ano, semestre, nota_final, status_disciplina, nota1, nota2))\n",
         "\n",
         "                if len(alunos_batch) >= 1000:\n",
         "                    cur.executemany(\"\"\"\n",
@@ -1956,12 +1981,17 @@
         "                        VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
         "                    \"\"\", list(aluno_disciplinas_batch))\n",
         "\n",
+        "                    cur.executemany(\"\"\"\n",
+        "                        INSERT INTO tb_desconto (matricula_aluno, tipo_desconto, valor_desconto)\n",
+        "                        VALUES (%s, %s, %s)\n",
+        "                    \"\"\", descontos_batch)\n",
+        "\n",
         "                    print(f\"Batch de {len(alunos_batch)} alunos inseridos com sucesso.\")\n",
         "                    conn.commit()\n",
         "                    alunos_batch.clear()\n",
         "                    aluno_disciplinas_batch.clear()\n",
+        "                    descontos_batch.clear()\n",
         "\n",
-        "            # Inserir qualquer registro restante\n",
         "            if alunos_batch:\n",
         "                cur.executemany(\"\"\"\n",
         "                    INSERT INTO tb_aluno (nome_aluno, email, cpf, media_global, status, id_curso, matricula, nome_curso)\n",
@@ -1974,22 +2004,43 @@
         "                    VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
         "                \"\"\", list(aluno_disciplinas_batch))\n",
         "\n",
+        "            if descontos_batch:\n",
+        "                cur.executemany(\"\"\"\n",
+        "                    INSERT INTO tb_desconto (matricula_aluno, tipo_desconto, valor_desconto)\n",
+        "                    VALUES (%s, %s, %s)\n",
+        "                \"\"\", descontos_batch)\n",
+        "\n",
         "            conn.commit()\n",
-        "            print(\"Alunos e associações inseridos com sucesso.\")\n",
+        "            print(\"Todos os alunos, disciplinas e descontos inseridos com sucesso.\")\n",
         "        except Exception as error:\n",
-        "            print(f\"Erro ao inserir alunos: {error}\")\n",
+        "            print(f\"Erro ao inserir dados: {error}\")\n",
         "            conn.rollback()\n",
         "        finally:\n",
         "            cur.close()\n",
         "            conn.close()\n",
         "\n",
-        "inserir_alunos(alunos_por_curso=10000)  # Exemplo: 50 alunos por curso\n"
+        "inserir_alunos_por_curso()\n"
       ],
       "metadata": {
-        "id": "eD9Af8oDLDWa"
+        "id": "eD9Af8oDLDWa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e2be11b-2725-4310-b37f-5b0c9cc78ec2"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gerando 60848 alunos para o curso 'Zoologia'.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
